tests/ui/no_generics.stderr
error[E0277]: the trait bound `MyStructBuilder<true, false>: HasReq2` is not satisfied
  --> tests/ui/no_generics.rs:12:10
   |
12 |         .build();
   |          ^^^^^ the trait `HasReq2` is not implemented for `MyStructBuilder<true, false>`
   |
   = help: the trait `HasReq2` is implemented for `MyStructBuilder<P0, true>`
note: required by a bound in `MyStructBuilder::<P0, P1>::build`
  --> tests/ui/no_generics.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<P0, P1>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
